--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
 .leaflet-marker-icon {
-  border:3px solid red;
+  border:3px solid gray;
+  border-radius: 100px;
 }
