--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,20 @@ code {
     --off-white: #faf9f6;
   }
 
+  *::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--off-white);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--color-primary);
+    border-radius: 15px;
+    border: 3px solid var(--off-white);
+  }
+
   body {
     @apply bg-bg;
   }
